syntax = "proto3";

package calendar;

option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Calendar {
  rpc Add(Event) returns (google.protobuf.Empty) {}
  rpc Update(Event) returns (google.protobuf.Empty) {}
  rpc Delete(DelRequest) returns  (google.protobuf.Empty) {}
  rpc GetForDay(GetRequest) returns (GetResponse) {}
  rpc GetForWeek(GetRequest) returns (GetResponse) {}
  rpc GetForMonth(GetRequest) returns (GetResponse) {}
}

message Event {
  string uuid                     = 1; // Уникальный идентификатор события.
  string header                   = 2; // Заголовок.
  google.protobuf.Timestamp date  = 3; // Дата и время события.
  int64 duration                  = 4; // Длительность события.
  string description              = 5; // Описание события.
  int64 notify_before             = 6; // За сколько времени высылать уведомление.
}

message DelRequest {
  string uuid = 1; // Уникальный идентификатор события.
}

message GetRequest {
  google.protobuf.Timestamp date = 3; // Дата и время события.
}

message GetResponse {
  repeated Event events = 1; // Список событий.
}